--- a/views/single-post.handlebars
+++ b/views/single-post.handlebars
@@ -6,7 +6,7 @@
     </div>
     <div class="meta">
         by {{post.user.username}} on
-        {{post.created_at}}
+        {{format_date post.created_at}}
         |
         {{post.comments.length}} {{format_plural "comment" post.comments.length}}
     </div>
